# katara

./: .clangd  .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  compute.wgsl  config.cpp  config.h  config.json  fragment.wgsl  gpu_render.cpp  gpu_render.h  gpu_sim.cpp  gpu_sim.h  irenderer.h  isimulator.h  main.cpp  render.cpp  render.h  sim.cpp  sim.h  vertex.wgsl
webgpu/sdl2webgpu-main/: sdl2webgpu.c
